# AISE-copy

./: .gitignore  .gitmodules  AGENT_LOG.md  CLAUDE.md  Makefile  PLAN.md  README.md  SPEC.md  SPEC_PROCESS.md  pyproject.toml
.cursor/skills/safe-worktree/: SKILL.md
.cursor/skills/windows-tooling/: SKILL.md
course_resource/: CLAUDE.md  agent-loop.html  agent_loop.pseudo.md
docs/superpowers/specs/: 2026-07-08-phycode-phase1-agent-harness-design.md
src/phycode/: __init__.py  errors.py  paths.py
src/phycode/config/: __init__.py  loader.py  models.py
src/phycode/events/: __init__.py  models.py
src/phycode/policy/: __init__.py  approval.py  dangerous_patterns.py  engine.py  rules.py
tests/: __init__.py  test_config_loader.py  test_dangerous_patterns.py  test_events_models.py  test_paths.py  test_policy_approval.py  test_policy_engine.py  test_scaffolding.py
tests/fixtures/: phycode_minimal.toml
